# turtlebot3_autorace_simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: camera_projection.yaml  detect_lane.yaml
latex/: main.tex
latex/figures/dot/: rosgraph.dot
latex/figures/eps/: graph.eps
latex/src/: howitworks.tex  installation.tex  introduction.tex  launch.tex
launch/: autorace.launch  circuit.launch  fake_controller.launch  gazebo.launch  rviz.launch
nodes/: detect_logo  detect_logos  lap_counter
rviz/: circuit.rviz  config.rviz
urdf/: turtlebot3_burger_pi.gazebo.xacro  turtlebot3_burger_pi.urdf.xacro
world/: tb3_autorace_circuit.world  tb3_autorace_circuit2.world  tb3_autorace_track1.world  tb3_autorace_track2.world
world/chess_flag/: model.config  model.sdf
world/chess_flag/materials/scripts/: chess_flag.material
world/cocacola_logo/: model.config  model.sdf
world/cocacola_logo/materials/scripts/: cocacola.material
world/heineken_logo/: model.config  model.sdf
world/heineken_logo/materials/scripts/: heineken.material
world/marlboro_logo/: model.config  model.sdf
world/marlboro_logo/materials/scripts/: marlboro.material
world/martini_logo/: model.config  model.sdf
world/pirelli_logo/: model.config  model.sdf
world/redbull_logo/: model.config  model.sdf
world/rolex_logo/: model.config  model.sdf
world/rolex_logo/materials/scripts/: rolex.material
world/seiko_logo/: model.config  model.sdf
world/turtlebot3_autorace_track1/: model.config  model.sdf
world/turtlebot3_autorace_track2/: model.config  model.sdf
(+6 files in other folders)
